--- a/TranXuanTruong_22688851_Lab06/lab06/src/App.css
+++ b/TranXuanTruong_22688851_Lab06/lab06/src/App.css
@@ -35,6 +35,9 @@
   display: flex;
 }
 
+.navbar .menu ul li.active{
+  background-color: #CF94A8;
+}
 .content {
   width: 100%;
 }
@@ -45,7 +48,9 @@
   border: 1px solid rgb(148, 137, 137,0.5);
 }
 .header .title{
-  color: rgb(235, 120, 139);
+  color: rgb(248, 83, 111);
+  font-size: 25px;
+  padding: 0px 40px;
 }
 
 .header .search-area{
