--- a/TranXuanTruong_22688851_Lab06/lab06/src/App.css
+++ b/TranXuanTruong_22688851_Lab06/lab06/src/App.css
@@ -26,7 +26,8 @@
   display: flex;
   align-items: center;
   text-align: center;
-  margin: 20px 0px;
+  margin: 10px 0px;
+  padding: 10px;
 }
 .navbar .menu ul li a img {
   margin-right: 10px;
@@ -35,8 +36,8 @@
   display: flex;
 }
 
-.navbar .menu ul li.active{
-  background-color: #CF94A8;
+.navbar .menu ul li a.active{
+  background-color: #F44B86;
 }
 .content {
   width: 100%;
