--- a/TranXuanTruong_22688851_Lab06/lab06/src/App.css
+++ b/TranXuanTruong_22688851_Lab06/lab06/src/App.css
@@ -1,13 +1,13 @@
-.navbar{
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgb(148, 137, 137,0.5);
-    padding: 30px;
+.navbar {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(148, 137, 137, 0.5);
+  padding: 30px;
 
 }
 
-.navbar .menu ul{
+.navbar .menu ul {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -15,12 +15,14 @@
   text-decoration: none;
   align-items: center;
 }
-.navbar .menu ul li{
-    width: 100%;
-    font-size: 20px;
-    color: white;
+
+.navbar .menu ul li {
+  width: 100%;
+  font-size: 20px;
+  color: white;
 }
-.navbar .menu ul li a{
+
+.navbar .menu ul li a {
   text-decoration: none;
   color: black;
   display: flex;
@@ -29,51 +31,73 @@
   margin: 10px 0px;
   padding: 10px;
 }
+
 .navbar .menu ul li a img {
   margin-right: 10px;
 }
-.layout-default{
+
+.layout-default {
   display: flex;
 }
 
-.navbar .menu ul li a.active{
+.navbar .menu ul li a.active {
   background-color: #F44B86;
 }
+
 .content {
   width: 100%;
 }
-.header{
+
+.header {
   display: flex;
-  justify-content: space-between;  
+  justify-content: space-between;
   width: 100%;
-  border: 1px solid rgb(148, 137, 137,0.5);
+  border: 1px solid rgb(148, 137, 137, 0.5);
 }
-.header .title{
+
+.header .title {
   color: rgb(248, 83, 111);
   font-size: 25px;
   padding: 0px 40px;
 }
 
-.header .search-area{
+.header .search-area {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.header .search-area img{
+
+.header .search-area img {
   margin: 0px 10px;
 }
-.header .search-area .search-input img{
+
+.search-input {
+  display: flex;
+  align-items: center;
+  background-color: #f0f0f0;
+  padding: 8px 12px;
+  border-radius: 25px;
+  width: 300px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+.header .search-area .search-input img {
   height: 20px;
   width: 20px;
 }
-.header .search-area .search-input input{
+
+.header .search-area .search-input input {
   border: none;
-  background-color: aliceblue;
-  padding: 5px;
-  border-radius: 50px;
-  width: 100%;
+  outline: none;
+  background: transparent;
+  flex: 1;
+  font-size: 16px;
+  color: #333;
+  padding: 4px 0;
 }
-.header .search-area .search-input{
+
+.header .search-area .search-input {
   display: flex;
   align-items: center;
   background-color: aliceblue;
@@ -81,18 +105,20 @@
   border-radius: 50px;
 }
 
-.table-design{
-    padding: 30px;
-    margin: auto;
+.table-design {
+  padding: 30px;
+  margin: auto;
 }
-.table-design .overview{
+
+.table-design .overview {
   margin: 0px 10px;
 }
-.table-design .list-card{
+
+.table-design .list-card {
   display: flex;
 }
 
-.table-design .list-card .card{
+.table-design .list-card .card {
   display: flex;
   padding: 10px;
   justify-content: space-between;
@@ -103,72 +129,79 @@
 
 }
 
-.table-design .list-card .card .cart-icon{
+.table-design .list-card .card .cart-icon {
   border: none;
   margin-top: 20px;
 }
-.table-design .list-card .card h1{
+
+.table-design .list-card .card h1 {
   font-size: 40px;
   font-weight: bold;
 }
-.table-design .list-card .card p{
+
+.table-design .list-card .card p {
   font-size: 18px;
 }
 
-.report .report-info{
+.report .report-info {
   display: flex;
   justify-content: space-between;
 }
 
-.report .report-info button{
+.report .report-info button {
   margin: 0px 5px;
   width: 100px;
   height: 40px;
   border: 1px solid #CF94A8;
   color: #CF94A8;
-  background-color: #FFF ;
+  background-color: #FFF;
   font-weight: bold;
   cursor: pointer;
 }
-.report .report-button{
+
+.report .report-button {
   margin-right: 45px;
 }
-.report .report-content{
+
+.report .report-content {
   width: 100%;
 }
 
-.report .report-content table{
+.report .report-content table {
   width: 100%;
   text-align: center;
   height: 400px;
 }
-.report .report-content table .orderDate{
+
+.report .report-content table .orderDate {
   font-weight: lighter;
   color: #ada5a5;
 }
 
-.report .report-content table .status{
+.report .report-content table .status {
   padding: 7px;
   border-radius: 30px;
 }
-.report .report-content table .status.new{
+
+.report .report-content table .status.new {
   background-color: #E9F7FC;
   color: rgb(126, 126, 248);
 }
 
-.report .report-content table .status.process{
+.report .report-content table .status.process {
   background-color: #96A125;
   color: yellow;
 }
 
-.report .report-content table .status.complete{
+.report .report-content table .status.complete {
   background-color: #EDFDF3;
   color: green;
 }
+
 table.display {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 15px; 
+  margin-top: 15px;
   font-family: Arial, sans-serif;
 }
 
@@ -178,9 +211,11 @@ table.display td {
   text-align: left;
   border-bottom: 1px solid #ddd;
 }
-table.display tr th:last-child{
+
+table.display tr th :last-child {
   text-align: center;
 }
+
 table.display thead {
   background-color: #f0f4f8;
 }
@@ -197,7 +232,7 @@ table.display tr:hover {
 table.display td h3 {
   margin: 0;
   font-size: 16px;
-  
+
 }
 
 table.display td:last-child {
